--- a/CloudDiskClinet/mainwindow.ui
+++ b/CloudDiskClinet/mainwindow.ui
@@ -14,7 +14,7 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QVBoxLayout" name="verticalLayout">
+   <layout class="QVBoxLayout" name="verticalLayout" stretch="1,10">
     <property name="leftMargin">
      <number>0</number>
     </property>
@@ -33,92 +33,45 @@
     <item>
      <widget class="QStackedWidget" name="stackedWidget">
       <property name="currentIndex">
-       <number>3</number>
+       <number>0</number>
       </property>
-      <widget class="QWidget" name="myfiles_page">
+      <widget class="QWidget" name="userdate_page">
+       <layout class="QHBoxLayout" name="horizontalLayout_6">
+        <property name="topMargin">
+         <number>9</number>
+        </property>
+        <item>
+         <widget class="QLabel" name="label_5">
+          <property name="font">
+           <font>
+            <pointsize>34</pointsize>
+           </font>
+          </property>
+          <property name="text">
+           <string>userdate</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+      <widget class="MyFile" name="myfiles_page">
        <layout class="QHBoxLayout" name="horizontalLayout">
-        <item>
-         <widget class="QLabel" name="label">
-          <property name="font">
-           <font>
-            <pointsize>34</pointsize>
-           </font>
-          </property>
-          <property name="layoutDirection">
-           <enum>Qt::LeftToRight</enum>
-          </property>
-          <property name="text">
-           <string>myflie</string>
-          </property>
-          <property name="textFormat">
-           <enum>Qt::AutoText</enum>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignCenter</set>
-          </property>
-          <property name="textInteractionFlags">
-           <set>Qt::LinksAccessibleByMouse</set>
-          </property>
-         </widget>
-        </item>
+        <property name="topMargin">
+         <number>9</number>
+        </property>
        </layout>
       </widget>
-      <widget class="QWidget" name="sharefile_page">
-       <layout class="QHBoxLayout" name="horizontalLayout_4">
-        <item>
-         <widget class="QLabel" name="label_2">
-          <property name="font">
-           <font>
-            <pointsize>34</pointsize>
-           </font>
-          </property>
-          <property name="text">
-           <string>sharefile</string>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignCenter</set>
-          </property>
-         </widget>
-        </item>
-       </layout>
+      <widget class="ShareFile" name="sharefile_page">
+       <layout class="QHBoxLayout" name="horizontalLayout_4"/>
       </widget>
-      <widget class="QWidget" name="ranking_page">
-       <layout class="QHBoxLayout" name="horizontalLayout_3">
-        <item>
-         <widget class="QLabel" name="label_3">
-          <property name="font">
-           <font>
-            <pointsize>34</pointsize>
-           </font>
-          </property>
-          <property name="text">
-           <string>ranking</string>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignCenter</set>
-          </property>
-         </widget>
-        </item>
-       </layout>
+      <widget class="Ranking" name="ranking_page">
+       <layout class="QHBoxLayout" name="horizontalLayout_3"/>
       </widget>
-      <widget class="QWidget" name="transfer_page">
-       <layout class="QHBoxLayout" name="horizontalLayout_2">
-        <item>
-         <widget class="QLabel" name="label_4">
-          <property name="font">
-           <font>
-            <pointsize>34</pointsize>
-           </font>
-          </property>
-          <property name="text">
-           <string>transfer</string>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignCenter</set>
-          </property>
-         </widget>
-        </item>
-       </layout>
+      <widget class="TransForm" name="transfer_page">
+       <layout class="QHBoxLayout" name="horizontalLayout_2"/>
       </widget>
      </widget>
     </item>
@@ -130,6 +83,30 @@
    <class>ButtonGroup</class>
    <extends>QWidget</extends>
    <header location="global">selfwidget/buttongroup.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>MyFile</class>
+   <extends>QWidget</extends>
+   <header location="global">myfile.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>Ranking</class>
+   <extends>QWidget</extends>
+   <header location="global">ranking.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>ShareFile</class>
+   <extends>QWidget</extends>
+   <header location="global">sharefile.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>TransForm</class>
+   <extends>QWidget</extends>
+   <header location="global">transform.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
